--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,6 +1,6 @@
 # MySQL properties
 db.driver=com.mysql.cj.jdbc.Driver
-db.url=jdbc:mysql://localhost:3306/spring_hiber
+db.url=jdbc:mysql://localhost:3306/springPP_2_3_1
 db.username=root
 db.password=roottoor
 
